--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,11 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            applicationVariants.all { variant ->
+                variant.outputs.each { output ->
+                    output.outputFile = new File(output.outputFile.parent, "ToneAnalyzer.apk")
+                }
+            }
         }
     }
 }
@@ -26,5 +31,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
+    compile 'com.ibm.watson.developer_cloud:java-sdk:3.0.1'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
